k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: robotics-app
  labels:
    app: robotics-app

spec:
  replicas: 2
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 120

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: robotics-app

  template:
    metadata:
      labels:
        app: robotics-app

    spec:
      securityContext:
        runAsNonRoot: true

      containers:
        - name: robotics-app
          image: robotics-app:latest

          securityContext:
            allowPrivilegeEscalation: false

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
