k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: robotics-service

spec:
  selector:
    app: robotics-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
